tests/baselines/reference/for-of34.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of34.ts(11,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of34.ts (1 errors) ====
    class StringIterator {
        next() {
            return v;
        }
        
        [Symbol.iterator]() {
            return this;
        }
    }
    
    for (var v of new StringIterator) { }
                  ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.